loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:4: error: not found: value foward
  foward(8);
  ^